# engine

./: .gitignore  .gitmodules  CMakeLists.txt
include/space_wars/: ai.hpp  celestial_body.hpp  planet.hpp  relay.hpp
src/: action.cpp  action.hpp  deserialize.cpp  deserialize.hpp  space_wars.cpp  space_wars.hpp  vec2.hpp
src/action/: move.cpp  move.hpp  send_fleet.cpp  send_fleet.hpp  send_fleet_through_relay.cpp  send_fleet_through_relay.hpp
src/cmd/master/: main.cpp
src/cmd/player/: ai.cpp  ai.hpp  main.cpp
src/map/: celestial_body.cpp  celestial_body.hpp  elements.hpp  json_serializer.cpp  json_serializer.hpp  planetary_system.cpp  planetary_system.hpp  solar_system.cpp  solar_system.hpp  sun.cpp  sun.hpp  system.cpp  system.hpp  universe.cpp  universe.hpp  universe_generator.cpp  universe_generator.hpp
src/map/system/: planet.cpp  planet.hpp
src/serialize/: json.cpp  json.hpp  raw.cpp  raw.hpp
src/world/: celestial_body.cpp  celestial_body.hpp  json_serializer.cpp  json_serializer.hpp  serialize.cpp  serialize.hpp  system.cpp  system.hpp  universe.cpp  universe.hpp  universe_generator.cpp  universe_generator.hpp  unserialize.cpp  unserialize.hpp
src/world/entity/: fleet.cpp  fleet.hpp
src/world/system/: planet.cpp  planet.hpp  relay.cpp  sun.cpp  sun.hpp
